--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@ body
 {
     background-color: rgb(209 234 244);
     height: 100px;
+    overflow: hidden;
 }
     /* menu bar */
     .logo
@@ -38,7 +39,7 @@ body
     }
     .menu ul li:not(:last-child)
     {
-        margin-right: 100px;
+        margin-right: 80px;
     }
     .menu ul li a
     {
@@ -70,10 +71,16 @@ body
         float: left;
         overflow: hidden;
     }
+    .sidebar ul{
+        margin: 0px;
+        padding: 0px;
+        overflow: hidden;
+    }
     .sidebar ul li{
         list-style: none;
-        margin-top: 50px;
+        margin: 50px 10px;
         background-color: rgb(82, 150, 146);
+        overflow: hidden;
     }
     .sidebar ul li a
     {
@@ -99,8 +106,8 @@ body
         float: left;
     }
     .homepage img{
-        height: 100%;
-        width: 80%;
+        height: 50%px;
+        width: 50%;
         display: block;
         margin: auto;
        
@@ -113,7 +120,7 @@ body
     .about img
     {
         height: 500px;
-        width: 800px;
+        width: 80%;
         display: block;
         margin: auto;
     }
@@ -130,6 +137,16 @@ body
     .contact p{
         text-align: center;
         font-size: 20px;
+    }
+    .extra
+    {
+        background-color: blue;
+        height: 100%;
+        width: 80%;
+        float: left;
+    }
+    .extra p{
+        padding: 20px;
     }
 
 /* footer */
