--- a/assets/style.css
+++ b/assets/style.css
@@ -70,7 +70,7 @@ body
         float: left;
         overflow: hidden;
     }
-    .sidebar ul{
+    /* .sidebar ul{
         margin: 0px;
         padding: 0px;
         overflow: hidden;
@@ -80,17 +80,20 @@ body
         margin: 50px 10px;
         background-color: rgb(82, 150, 146);
         overflow: hidden;
-    }
-    .sidebar ul li a
+    } */
+    .sidebar a
     {
         text-decoration: none;
-        padding: 10px;
+        text-align: center;
         font-size: 20px;
-        display: table;
-        margin: 0 auto;
-        color: black;
+        margin-top: 10px;
+        color: rgb(36, 34, 34);
+        background-color: rgb(109, 148, 135);
+        padding: 16px;
+        display: block;
+        border: 2px solid black;
     }
-    .sidebar ul li a:hover
+    .sidebar a:hover
     {
         background-color: rgb(112, 206, 206);
         color: darkgreen;
