--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -9,7 +9,7 @@ body
     margin:10px auto;
 }
 /* header */
-.header 
+.header
 {
     background-color: rgb(209 234 244);
     height: 100px;
@@ -22,8 +22,8 @@ body
     .logo img
     {
         height: 80px;
-        width: 200px; 
-        margin: 5px;  
+        width: 200px;
+        margin: 5px;
     }
     .menu
     {
@@ -34,7 +34,7 @@ body
     {
         list-style: none;
         display: inline;
-        
+
     }
     .menu ul li:not(:last-child)
     {
@@ -58,8 +58,9 @@ body
 /* main part */
 .main
 {
-    height: 100vh;
+    height: 80vh;
     background-color: rgb(156 192 207);
+    overflow: hidden;
 }
     /* sidebar */
     .sidebar
@@ -86,7 +87,7 @@ body
     {
         background-color: rgb(112, 206, 206);
         color: darkgreen;
-        
+
     }
     /*body*/
     .homepage
@@ -101,7 +102,7 @@ body
         width: 50%;
         display: block;
         margin: auto;
-       
+
     }
     .about
     {
@@ -121,14 +122,13 @@ body
     }
     .contact
     {
-        float: left;
-        width: 80%;
-        padding-top: 10%;
+      float: left;
+      height: 100%;
+      width: 80%;
+      overflow: hidden;
+
     }
-    .contact p{
-        text-align: center;
-        font-size: 20px;
-    }
+
     .extra
     {
         background-color: blue;
