Added index file to move on any choice.

--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -131,7 +131,7 @@ body
 
     .extra
     {
-        background-color: blue;
+        /* background-color: blue; */
         height: 100%;
         width: 80%;
         float: left;
