--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ div
     border: 2px solid black;
     text-align: center;
     padding-top: 70px; 
-    line-height: 2em;
+    line-height: 1em;
     font-family: 'Sofia';font-size: 18px;
+    overflow: hidden;
 }
 a
 {
