--- a/web/assets/responsive.css
+++ b/web/assets/responsive.css
@@ -5,7 +5,7 @@
     /* header  */
     .header, .main, .footer
     {
-     width: 100%;
+     width: 95%;
      margin-top:10px;
     }
 
@@ -13,7 +13,7 @@
     .logo img
     {
         
-        margin: 5px  0;
+        margin:5px;
     }
     .menu
     {
@@ -29,7 +29,7 @@
     }
     .menu ul li:not(:last-child)
     {
-        margin-right: 20px;
+        margin-right: 10px;
     }
     .menu ul li a
     {
@@ -40,6 +40,18 @@
         border-color: rgb(68, 68, 64);
         border-width: 2px;
         padding: 5px;
+    }
+    .sidebar a
+    {
+        text-decoration: none;
+        text-align: center;
+        font-size: 15px;
+        margin-top: 10px;
+        color: rgb(36, 34, 34);
+        background-color: rgb(109, 148, 135);
+        padding: 3px;
+        display: block;
+        border: 2px solid black;
     }
     .about
     {
@@ -83,6 +95,7 @@
          background-color: rgb(212, 205, 205);
      }
      td{
+         font-size: 10px;
          text-align: right;
          vertical-align: top;
          padding: 5px 0;
@@ -93,26 +106,3 @@
          height: 50px;
      }
 }
-@media only screen and (max-width: 500px)
-{
-    .logo img
-    {
-        height: 50px;
-        width: 120px;
-        margin: 15px 0;
-    }
-    .menu ul li:not(:last-child)
-    {
-        margin-right: 1px;
-    }
-    .menu ul li a
-    {
-        text-decoration: none;
-        font-size: 20px;
-        color: rgb(64, 121, 93);
-        border-style: solid;
-        border-color: rgb(68, 68, 64);
-        border-width: 2px;
-        padding: 1px;
-    }
-} 
