--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -28,6 +28,7 @@ body
     }
     .menu
     {
+        display: block;
         float: right;
         margin: 20px;
     }
@@ -55,6 +56,36 @@ body
     {
         background-color: lightcyan;
     }
+    .select
+    {
+        float: right;
+        margin: 15px 5px;
+        box-sizing: content-box;
+        display: none;
+        background-color: lightgrey;
+        height: 30px;
+         font-size: 16px;
+        border: 2px solid rgb(36, 39, 36);
+        padding: 2px;
+        border-radius: 5px;
+       
+    }
+    .select select
+    {
+        border:none;
+        float: right;
+        color: rgb(64, 121, 93);
+        background-color: lightgrey;
+        font-size: 16px;
+        height: 100%;
+        width: 100%;
+    }
+    .dropdown
+    {
+        display: none;
+    }
+   
+ 
 
 /* main part */
 .main
@@ -73,7 +104,7 @@ body
         float: left;
         overflow: hidden;
     }
-    .sidebar a
+    .sidebar .large a
     {
         text-decoration: none;
         text-align: center;
@@ -101,9 +132,9 @@ body
         float: left;
     }
     .homepage .gallery{
-        margin: 14px;
-        height: 150px;
-        width: 20%;
+        margin: 2px 2%;
+        height: 22%;
+        width: 27%;
         display: inline-block;
         position: relative;
         overflow: hidden;
